--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-dnspython>=1.15.0
-future>=0.16.0
-linecache2>=1.0.0
-publicsuffix>=1.1.0
-publicsuffixlist>=0.6.1
-six>=1.11.0
-traceback2>=1.4.0
+asn1crypto==0.24.0
+cffi==1.12.3
+cryptography==2.7
+dnspython==1.16.0
+future==0.17.1
+linecache2==1.0.0
+publicsuffix==1.1.0
+publicsuffixlist==0.6.5
+pybase64==0.5.0
+pycparser==2.19
+six==1.12.0
+traceback2==1.4.0
+unittest2==1.1.0
